# DndBattleManager

./: Dockerfile  README.md  next.config.js  package-lock.json
agent/: Dockerfile  __init__.py  api.py  docker-compose.yml  model.py  process.py  pyproject.toml  rag.py  server.py
client/: client.py
frontend/src/pages/: index.jsx
frontend/src/services/: mapService.js
