[tool.poetry]
name = "dnd-agent"
version = "0.1.0"
description = ""
authors = ["Faneagain"]
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.0"
openai = "^1.12.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120